--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My First Webpage</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/styles.css">
+<title>Module 2 Solution</title>
+
 </head>
 <body>
+<h1>Our Menu</h1>
+
+<div id="container">
+  <h5 id="p1">
+  	<p id="chick">Chicken</p>
+  	<p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </h5>
+  <h5 id="p2">
+  	<p id="beef">Beef</p>
+  	<p id="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+  	</p>
+  </h5>
+  <h5 id="p3">
+  	<p id="sushi">Sushi</p>
+  	<p id="text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  </h5></div>
 
 </body>
 </html>
